--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -25,7 +25,7 @@ There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secu
 \label{sec:proposedarch}
 %Here describe what we propose to do, perhaps?
 %Our timeline/evaluation are kinda worthless without it.
-Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VM's (see Figure \ref{fig:arch}).  Each VM will contain a thin OS for running the third-party application.  We can choose either to run an x86-based Operating Systems in the VM or an ARM based Operating System. The former will enable a more diverse set of target applications to be run, while the latter would have lesser overhead due to virtualization. We plan to evaluate both of these options. Each of the VM's will headless themselves, but will render their applications by connecting to the native X-server. \\
+Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VM's (see Figure \ref{fig:arch}).  Each VM will contain a thin OS for running the third-party application.  We can choose either to run an x86-based Operating System in the VM or an ARM based Operating System. The former will enable a more diverse set of target applications to be run, while the latter would have lesser overhead due to virtualization. We plan to evaluate both of these options. Each of the VM's will headless themselves, but will render their applications by connecting to the native X-server. \\
 
 The other component is the integration front-end.  This contains a light X-server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, switching, suspending, resuming, migrating the VM's and ensuring the X-server is running properly. Most of this actual logic and functionality will be implemented by the hypervisor in the virtualization framework.\\
 
