VM's -> VMs Couple of other minor changes

--- a/paper/timeline.tex
+++ b/paper/timeline.tex
@@ -9,7 +9,7 @@
 \subsection{March 17 - April 27}
 	\begin{itemize*}
 	\item Integrate X Window System with Window Manager of the mobile device.
-	\item Implement VM Manager to spawn the virtual machines and x11.
+	\item Implement VM Manager to spawn the virtual machines and X-Server.
   \item Implement migration UI on desktop and mobile device.
   \item Migrate existing applications between desktop and mobile device.
 	\item Investigate performance improvements to make emulation faster.
