--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -25,12 +25,12 @@ There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secu
 \label{sec:proposedarch}
 %Here describe what we propose to do, perhaps?
 %Our timeline/evaluation are kinda worthless without it.
-Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VM's (see Figure \ref{fig:arch}).  Each VM will contain a thin OS for running the third-party application.  We can choose either to run an x86-based Operating System in the VM or an ARM based Operating System. The former will enable a more diverse set of target applications to be run, while the latter would have lesser overhead due to virtualization. We plan to evaluate both of these options. Each of the VM's will headless themselves, but will render their applications by connecting to the native X-server. \\
+Our proposed architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains the hypervisor (QEMU or KVM based) as well as each of the spawned VMs (see Figure \ref{fig:arch}).  Each VM will contain a thin OS for running the third-party application.  We can choose either to run an x86-based Operating System in the VM or an ARM based Operating System. The former will enable a more diverse set of target applications to be run, while the latter would have lesser overhead due to virtualization. We plan to evaluate both of these options. Each of the VMs will headless themselves, but will render their applications by connecting to the native X-server. \\
 
-The other component is the integration front-end.  This contains a light X-server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, switching, suspending, resuming, migrating the VM's and ensuring the X-server is running properly. Most of this actual logic and functionality will be implemented by the hypervisor in the virtualization framework.\\
+The other component is the integration front-end.  This contains a light X-server that has been integrated into the host OS, and also contains the VM manager.  The VM manager will either run inside the X-server as a native application (ARM-based), or as a separate application within the host OS.  The VM manager will be the user interface that controls launching, switching, suspending, resuming, migrating the VMs and ensuring the X-server is running properly. Most of this actual logic and functionality will be implemented by the hypervisor in the virtualization framework.\\
 
-A shared X-server removes rendering overhead from each VM and reduces the complexity in composing the UI. We chose to share the rendering state between third-party applications for performance reasons and simplicity of design, but ensure isolation from native applications.  Additionally the X-server will be running native code, which will allow for it to be less CPU intensive than running inside a VM. \\
+A shared X-server removes rendering overhead from each VM and reduces the complexity in composing the UI. We choose to share the rendering state between third-party applications for performance reasons and simplicity of design, but ensure isolation from native applications.  Additionally the X-server will be running native code, which will allow for it to be less CPU intensive than running inside a VM. \\
 
-Additionally we aim to have the virtualization framework will be device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we will strive to make its implementation simple. Our first implementation will focus on one particular device and OS and support live migration of applications from desktops. \\
+We aim to make the virtualization framework device independent, which is important because we anticipate this to be the more complex component.  The integration front-end will have to be ported for each new device we support, but we will strive to make its implementation simple. Our first implementation will focus on one particular device and OS and support live migration of applications from desktops. \\
 
-In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. Our security model proposes an effective method of isolating applications and find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
+In summary, we propose to leverage existing hypervisors to build a secure, usable and portable framework for mobile device virtualization. Our contributions will be focused on providing the ability for live migration of applications with deep integration to the mobile device. Our proposed security model is an effective method to isolate applications and we find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code.
