Create sections, subsections etc

--- a/midterm-report/paper.tex
+++ b/midterm-report/paper.tex
@@ -25,12 +25,16 @@ University of Illinois at Urbana Champaign}
 %\input{abstract.tex}
 \input{intro.tex}
 \label{sec:intro}
-\input{timeline.tex}
-\label{sec:timeline}
+\input{design.tex}
+\label{sec:design}
+\input{impl.tex}
+\label{sec:impl}
 \input{eval.tex}
 \label{sec:eval}
-\input{results.tex}
-\label{sec:results}
+\input{related.tex}
+\label{sec:related}
+\input{conclusion.tex}
+\label{sec:conclusion}
 
 \bibliographystyle{abbrv}
 \bibliography{mybib.bib}
