--- a/midterm-report/eval.tex
+++ b/midterm-report/eval.tex
@@ -1,9 +1,3 @@
 \section{Evaluation plan}
-We evaluate our system focusing on our design goals of portability, isolation and usability
-	\begin{itemize*}
-	\item Running existing unmodified binaries on the mobile device.
-	\item Verify correctness of the implementation using standard benchmarks.
-	\item Measure performance impact of emulation on ARM.
-	\item Evaluate the latency of an interactive application which renders using the native X-server.
-  \item Profile the memory and power overhead due to virtualization.
-	\end{itemize*}
+\subsection{Preliminary Virtualization Results}
+\subsection{X-Server numbers}
