--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -1,6 +1,6 @@
 \section{Implementation}
 \subsection{Cross-Compilation}
-Nearly all modern smartphones run arm processors.  As a result, binaries created for desktop PCs (which run x86 or x86\_64 almost exclusively) will not work on smartphones.  This leaves two options: compile the source code on the smartphone itself, or use an environment to compile code on a desktop.  Compilation on a smartphone is far from an ideal solution.  The compilation itself will be much slower due to the weaker processor, and additional time will be spent transferring the code to fix simple syntactical errors.  The only viable option is to use a compilation environment.  The Palm Pre has a supported toolchain using scratchbox2.  The same toolchain can also be used to build for the Android.
+Nearly all modern smartphones run arm processors.  On the other hand, nearly all modern desktops run x86 or x86\_64 processors.  As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones.  This leaves two options: compile the source code on the smartphone itself, or use an specialized environment to compile code on a desktop.  Although it may seem simple, compilation on a smartphone is far from an ideal solution.  The compilation itself will be much slower due to the weaker processors in phones, and additionally, time will be wasted transferring the source code to the phone just to find compile-time errors.  The only viable option is to use a compilation environment.  The Palm Pre has a supported toolchain using scratchbox2.  The same toolchain can also be used to build for the Android.
 
 \subsection{libc vs bionic}
 Despite the fact the Pre and the Android are both running Linux OSes on an arm chip, the environments they provide for our project are enormously different.  The Pre is bundled with a large suite of common Unix applications and libraries, while the Android diverges, running minimalistic libraries and lacking many common libraries and applications.  Of these differences, the C compiler library is probably the most substantial. The Pre uses an unmodified version of glibc and the Android uses Bionic, a lightweight and small C compiler library.  Many Linux applications have glibc as a dependency, and as a result, builds for the Android must have statically link libraries.  Between this and the lack of useful applications (gdb and other debugging tools) development on the Android has provent much more difficult.  
