midterm: impl section, reworked cc section

--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -1,6 +1,15 @@
 \section{Implementation}
 \subsection{Cross-Compilation}
-Nearly all modern smartphones run arm processors.  On the other hand, nearly all modern desktops run x86 or x86\_64 processors.  As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones.  This leaves two options: compile the source code on the smartphone itself, or use an specialized environment to compile code on a desktop.  Although it may seem simple, compilation on a smartphone is far from an ideal solution.  The compilation itself will be much slower due to the weaker processors in phones, and additionally, time will be wasted transferring the source code to the phone just to find compile-time errors.  The only viable option is to use a compilation environment.  The Palm Pre has a supported toolchain using scratchbox2.  The same toolchain can also be used to build for the Android.
+Nearly all modern smartphones run arm processors. (CITATION?)
+On the other hand, nearly all modern desktops run x86 or x86\_64 processors. (CITATION?)
+As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones.
+Additionally, the devices themselves are rather limited with respect to building code.  Relatively limited cpu, memory, disk, coupled with input and usability concerns make this an unattractive way to compile code.  A number of devices have lacking userspace environments that would make compiling code on them even more difficult.
+Our solution is to use a cross-compileration environment to use a faster desktop to write our code targetting the various mobile platforms.
+We build upon the scratchbox2 enviroment \cite{sb2}, in particular using the cross-compilation enviroment created by webos-internals \cite{webosinterals}.
+Scratchbox2 is a cross-compilation engine that uses a combination of emulation and library interposition to make it easier to cross-compile code bases that don't otherwise provide a means to cross-compile.
+The result is almost a virtualized environment that automatically invokes cross-compilation tools as required, abstracting away much of difficulies that cross-compilation can usually entail.
+Important features in our environment include 1)a system of dependency resolution that allows us to conveniently build and package our applications more easily; 2)staging headers and device libraries such that we can use the same ones that are available on the target device; 3)static or dynamically linked executable compilation.
+This allows us to conveniently build for multiple platforms from the comfort and reliabilty of our own systems.  Presently we use this to target the Palm Pre as well as android devices, in particular the Motorola G1.
 
 \subsection{libc vs bionic}
 Despite the fact the Pre and the Android are both running Linux OSes on an arm chip, the environments they provide for our project are enormously different.  The Pre is bundled with a large suite of common Unix applications and libraries, while the Android diverges, running minimalistic libraries and lacking many common libraries and applications.  Of these differences, the C compiler library is probably the most substantial. The Pre uses an unmodified version of glibc and the Android uses Bionic, a lightweight and small C compiler library.  Many Linux applications have glibc as a dependency, and as a result, builds for the Android must have statically link libraries.  Between this and the lack of useful applications (gdb and other debugging tools) development on the Android has provent much more difficult.  
