--- a/midterm-report/conclusion.tex
+++ b/midterm-report/conclusion.tex
@@ -1,1 +1,2 @@
 \section{Conclusion}
+We experienced alot of success in porting X to the Pre, and although the preliminary virtualization attemps were unusably slow, the remaining options are hardly exhausted.  In terms of performance, Linux Containers (LXC), looks very promising.  Despite needing to backport the needed kernel functionality to support LXC on the Pre, we remain optimistic and will continue working towards our goal of a usable, secure solution.
