Add a couple of paragraphs to the introduction

--- a/midterm-report/mybib.bib
+++ b/midterm-report/mybib.bib
@@ -133,3 +133,9 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
  title = "{ARM - TrustZone}",
  howpublished = {\url{http://www.arm.com/products/processors/technologies/trustzone.php}},
 }
+
+@misc{mariposa2009android,
+  author = {{Pandora Research}},
+  title = "{Vodafone distributes Mariposa botnet}",
+  howpublished = {\url{http://research.pandasecurity.com/vodafone-distributes-mariposa}},
+}
