Fix section refs

--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -1,4 +1,5 @@
 \section{Implementation}
+\label{sec:impl}
 \subsection{Cross-Compilation}
 Nearly all modern smartphones run arm processors. (CITATION?)
 On the other hand, nearly all modern desktops run x86 or x86\_64 processors. (CITATION?)
