--- a/midterm-report/intro.tex
+++ b/midterm-report/intro.tex
@@ -7,4 +7,4 @@ Migrating a system to a mobile device can take advantage of network or computati
 
 Existing solutions for isolation of mobile applications introduce a Type I hypervisor \cite{mvp, okl4} which manages the phone's hardware and allows running multiple operating system on top. While these solutions are useful, it would be better to have isolated applications which are integrated with the host operating system's application launcher and does not suffer from a large performance penalty. In order to achieve this goal, we propose to have an isolation framework running on the host operating system and a shared rendering engine for improved performance. Since most of the mobile devices work on the ARM architecture, we plan to evaluate how different virtualization techniques perform on ARM. Our preliminary investigations evaluate the difference in performance between emulating ARM-on-ARM vs x86-on-ARM and also pre We believe that such an integrated solution would enable wider adoption of secure applications across mobile devices.\\
 
-The rest of this report is structured as follows: Section \ref{sec:design} presents an overview of the design and also describes in detail some of the design choices which we make. Sections \ref{sec:impl} describes the preliminary implementation and deployment of virtualization on two smart phones and also discusses details about porting the X server. Evaluation of our existing system is presented in \ref{sec:eval} and section \ref{sec:conclusion} concludes.
+The rest of this report is structured as follows: Section \ref{sec:design} presents an overview of the design and also describes in detail some of the design choices which we make. Sections \ref{sec:impl} describes the preliminary implementation and deployment of virtualization on two smart phones and also discusses details about porting the X server. Evaluation of our existing system is presented in \ref{sec:eval}. Section \ref{sec:related} discusses existing efforts in this area and section \ref{sec:conclusion} concludes.
