Citations for implementation stuff

--- a/midterm-report/mybib.bib
+++ b/midterm-report/mybib.bib
@@ -139,3 +139,19 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   title = "{Vodafone distributes Mariposa botnet}",
   howpublished = {\url{http://research.pandasecurity.com/vodafone-distributes-mariposa}},
 }
+
+@misc{x_quote,
+  howpublished = {\url{http://cgit.freedesktop.org/xorg/xserver/commit/?id=52bc6d944946e66ea2cc685feaeea40bb496ea83}},
+}
+
+@misc{x_glossary,
+  howpublished = {\url{http://www.x.org/wiki/Development/Documentation/Glossary}},
+}
+
+@misc{sdl,
+  howpublished = {\url{http://www.libsdl.org/}},
+}
+
+@misc{gles,
+  howpublished = {\url{http://www.khronos.org/opengles/2_X/}},
+}
