removed "citation" text

--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -1,12 +1,9 @@
 \section{Implementation}
 \label{sec:impl}
 \subsection{Cross-Compilation}
-Nearly all modern smartphones run arm processors. (CITATION?)
-On the other hand, nearly all modern desktops run x86 or x86\_64 processors. (CITATION?)
-As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones.
-Additionally, the devices themselves are rather limited with respect to building code.  Relatively limited cpu, memory, disk, coupled with input and usability concerns make this an unattractive way to compile code.  A number of devices have lacking userspace environments that would make compiling code on them even more difficult.
+Nearly all modern smartphones run arm processors.  On the other hand, nearly all modern desktops run x86 or x86\_64 processors. As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones. Additionally, the devices themselves are rather limited with respect to building code.  Relatively limited cpu, memory, disk, coupled with input and usability concerns make this an unattractive way to compile code.  A number of devices have lacking userspace environments that would make compiling code on them even more difficult.
 Our solution is to use a cross-compileration environment to use a faster desktop to write our code targetting the various mobile platforms.
-We build upon the scratchbox2 enviroment \cite{sb2}, in particular using the cross-compilation enviroment created by webos-internals \cite{webosinterals}.
+We build upon the scratchbox2 enviroment \cite{sb2}, in particular using the cross-compilation enviroment created by webos-internals \cite{webosinterals}.\\
 Scratchbox2 is a cross-compilation engine that uses a combination of emulation and library interposition to make it easier to cross-compile code bases that don't otherwise provide a means to cross-compile.
 The result is almost a virtualized environment that automatically invokes cross-compilation tools as required, abstracting away much of difficulies that cross-compilation can usually entail.
 Important features in our environment include 1)a system of dependency resolution that allows us to conveniently build and package our applications more easily; 2)staging headers and device libraries such that we can use the same ones that are available on the target device; 3)static or dynamically linked executable compilation.
