midterm: url for notification support

--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -35,7 +35,7 @@ A primary goal of our project is to cleanly integrate into the host X server.  W
 
 One solution to this is to take advantage of the work done on rootless X ( http://cgit.freedesktop.org/xorg/xserver/tree/miext/rootless/README.txt for lack of a better citation ).  ``The generic rootless layer allows an X server to be implemented on top of another window server in a cooperative manner. This allows the X11 windows and native windows of the underlying window server to coexist on the same screen. The layer is called "rootless" because the root window of the X server is generally not drawn. Instead, each top-level child of the root window is represented as a separate on-screen window by the underlying window server'' (this /needs/ the git repo citatation, so if you change that put it here).
 
-Another final idea is to take advantage of standard X notification events and hook into mobile device notification systems, which both WebOS and Android support.  This could further allow integration into the host OS, and is particularly useful since many mobile applications are data driven and their primary purpose being getting information to the user. (either remove this last sentence or the paragraph.. or fix it if you can :D).
+Another final idea is to take advantage of standard X notification events \cite{notifications} (http://www.galago-project.org/specs/notification/0.9/index.html ) and hook into mobile device notification systems, which both WebOS and Android support.  This could further allow integration into the host OS, and is particularly useful since many mobile applications are data driven and their primary purpose being getting information to the user. (either remove this last sentence or the paragraph.. or fix it if you can :D).
 
 \begin{figure}[tbh]
 \centering
