--- a/midterm-report/intro.tex
+++ b/midterm-report/intro.tex
@@ -5,6 +5,8 @@ In recent years, virtual machines have become prevalent in cluster computing env
 
 Migrating a system to a mobile device can take advantage of network or computation facilities that are closer to the user's location and provide the user with a consistent experience irrespective of the network connectivity. Environment migration has been studied earlier, in the context of servers in a cluster \cite{clark2005live} and enables administrators of clusters to perform maintenance tasks without interruption. On the other hand, migration techniques on mobile devices can help maintain consistent snapshots which allow easy transfer of data when users switch mobile phones and to roll-back the system to a previously known state.\\
 
-Existing solutions for isolation of mobile applications introduce a Type I hypervisor \cite{mvp, okl4} which manages the phone's hardware and allows running multiple operating system on top. While these solutions are useful, it would be better to have isolated applications which are integrated with the host operating system's application launcher and does not suffer from a large performance penalty. In order to achieve this goal, we propose to have an isolation framework running on the host operating system and a shared rendering engine for improved performance. Since most of the mobile devices work on the ARM architecture, we plan to evaluate how different virtualization techniques perform on ARM. Our preliminary investigations evaluate the difference in performance between emulating ARM-on-ARM vs x86-on-ARM and our results show that ARM-on-ARM virtualization has much lower performance overhead. We also detail other virtualization techniques that we plan to investigate which include traditional techniques like User Mode Linux and OS-virtualization tools like Linux Containers(LXC). Linux Containers present a low overhead technique of isolating different virtual environments and we believe that they may represent the ideal balance between security and usability.\\
+Existing solutions for isolation of mobile applications introduce a Type I hypervisor \cite{mvp, okl4} which manages the phone's hardware and allows running multiple operating system on top. While these solutions are useful, it would be better to have isolated applications which are integrated with the host operating system's application launcher and does not suffer from a large performance penalty. In order to achieve this goal, we propose to have an isolation framework running on the host operating system and a shared rendering engine for improved performance. Since most of the mobile devices work on the ARM architecture, we plan to evaluate how different virtualization techniques perform on ARM.\\
+
+Our preliminary investigations evaluate the difference in performance between emulating ARM-on-ARM vs x86-on-ARM and our results show that ARM-on-ARM virtualization has much lower performance overhead. We also detail other virtualization techniques that we plan to investigate which include traditional techniques like User Mode Linux and OS-virtualization tools like Linux Containers(LXC). Linux Containers present a low overhead technique of isolating different virtual environments and we believe that they may represent the ideal balance between security and usability.\\
 
 We believe that an integrated solution where untrusted applications are integrated with mobile device would enable wider adoption. The rest of this report is structured as follows: Section \ref{sec:design} presents an overview of the design and also describes in detail some of the design choices which we make. Sections \ref{sec:impl} describes the preliminary implementation and deployment of virtualization on two smart phones and also discusses details about porting the X server. Evaluation of our existing system is presented in \ref{sec:eval}. Section \ref{sec:related} discusses existing efforts in this area and section \ref{sec:conclusion} concludes.
