--- a/midterm-report/mybib.bib
+++ b/midterm-report/mybib.bib
@@ -155,3 +155,15 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 @misc{gles,
   howpublished = {\url{http://www.khronos.org/opengles/2_X/}},
 }
+
+@misc{rootless,
+  howpublished = {\url{http://cgit.freedesktop.org/xorg/xserver/tree/miext/rootless/README.txt}},
+}
+
+@misc{notifications,
+  howpublished = {\url{http://www.galago-project.org/specs/notification/0.9/index.html}},
+}
+
+@misc{jni,
+  howpublished = {\url{http://java.sun.com/j2se/1.4.2/docs/guide/jni/index.html}},
+}
